--- a/static/style.css
+++ b/static/style.css
@@ -9,13 +9,10 @@ body {
   max-width: 600px;
   margin: auto;
   padding: 20px 30px;
-  box-shadow: 0 0 10px #ffffff;
-  border-radius: 13px;
-  border-color: white;
 }
 
 nav a {
-  margin: 0 10px;
+  margin: 0 15px;
   color: #007bff;
   text-decoration: none;
   font-weight: bold;
@@ -39,6 +36,7 @@ button {
 textarea {
   resize: vertical;
   min-height: 80px;
+  color: white;
 }
 
 button {
@@ -155,21 +153,23 @@ a:hover {
 /* NOVAS CLASSES */
 .post-container {
   background-color: rgb(0, 0, 0);
-  padding: 12px 16px;
-  border-radius: 12px;
+  padding: 16px;
+  border-radius: 25px;
   margin-bottom: 20px;
   position: relative;
   border: 1px solid #444;
 }
 
 .post-nick {
-  font-size: 1.3em;
+  font-size: 1.1em;
   margin-bottom: 5px;
+  color: white;
 }
 
 .post-texto {
   font-size: 1em;
   margin-bottom: 10px;
+  color: white;
 }
 
 .post-acoes {
@@ -196,22 +196,32 @@ a:hover {
   margin-top: 10px;
 }
 
+.comentario-texto {
+  color: white;
+}
+
 /* NAV FIXO NO RODAPÉ */
 .nav-footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   background: #000;
-  padding: 12px 0;
+  padding: 20px 0;
   text-align: center;
-  border-top: 1px solid #444;
+  border-top: none;
   z-index: 100;
 }
 
+.nav-footer nav {
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+}
+
 .nav-footer nav a {
-  margin: 0 15px;
   color: #fff;
-  font-size: 1.1em;
+  font-size: 1.3em;
+  font-weight: bold;
 }
 
 /* MOBILE FRIENDLY */
@@ -221,11 +231,16 @@ a:hover {
   }
 
   .nav-footer nav a {
-    font-size: 1em;
+    font-size: 1.1em;
     margin: 0 10px;
   }
 
   .post-container {
     padding: 10px 12px;
+    border-radius: 20px;
+  }
+
+  .post-nick {
+    font-size: 1em;
   }
 }
