--- a/static/style.css
+++ b/static/style.css
@@ -154,7 +154,7 @@ a:hover {
 .post-container {
   background-color: rgb(0, 0, 0);
   padding: 16px;
-  border-radius: 20px 30px 30px 30px;
+  border-radius: 30px;
   margin-bottom: 20px;
   position: relative;
   border: 1px solid #444;
@@ -164,6 +164,7 @@ a:hover {
   font-size: 1em;
   margin-bottom: 5px;
   color: white;
+  border-top-left-radius: 30px;
 }
 
 .post-texto {
@@ -240,7 +241,7 @@ a:hover {
 
   .post-container {
     padding: 10px 12px;
-    border-radius: 20px 28px 28px 28px;
+    border-radius: 25px;
   }
 
   .post-nick {
