ATUALIZAÇÃO (MEDO) do Feed e Css

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -11,20 +11,6 @@
   </head>
   <body>
     <div class="container">
-      <h2>Feed</h2>
-      <form method="POST" action="{{ url_for('feed') }}">
-        <label for="texto">Nova postagem</label>
-        <textarea
-          id="texto"
-          name="texto"
-          rows="3"
-          placeholder="O que quer contar?"
-          required
-        ></textarea>
-        <button type="submit">Postar</button>
-      </form>
-      <hr />
-
       {% if posts %} {% for post, tempo, likes_count, comentarios, liked in
       posts %}
       <div class="post-container">
@@ -57,7 +43,7 @@
         <div class="post-acoes">
           <a
             href="{{ url_for('like_post', post_id=post.id) }}"
-            onclick="scrollStay()"
+            onclick="saveScroll()"
           >
             {% if liked %}
             <img
@@ -99,7 +85,7 @@
               placeholder="Comente aqui..."
               required
             ></textarea>
-            <button type="submit" onclick="scrollStay()">Enviar</button>
+            <button type="submit" onclick="saveScroll()">Enviar</button>
           </form>
         </div>
 
