--- a/static/style.css
+++ b/static/style.css
@@ -154,8 +154,8 @@ a:hover {
 .post-container {
   background-color: rgb(0, 0, 0);
   padding: 16px;
-  border-radius: 30px;
-  margin-bottom: 20px;
+  border-radius: 20px;
+  margin: 15px 0;
   position: relative;
   border: 1px solid #444;
 }
