--- a/templates/feed.html
+++ b/templates/feed.html
@@ -42,6 +42,7 @@
           </form>
         </div>
         {% endif %}
+
         <div class="user-box">
           <a
             href="{{ url_for('perfil', usuario=post.autor.apelido) }}"
@@ -50,71 +51,78 @@
             {{ post.autor.apelido }}
           </a>
         </div>
-        <div class="post-content">{{ post.texto|e }}</div>
 
-        <small>{{ tempo }}</small>
-        <div class="post-acoes">
-          <a
-            href="{{ url_for('like_post', post_id=post.id) }}"
-            class="like-link"
+        <div class="post-content">
+          {{ post.texto|e }}
+          <br />
+          <small>{{ tempo }}</small>
+
+          <div class="post-acoes">
+            <a
+              href="{{ url_for('like_post', post_id=post.id) }}"
+              class="like-link"
+            >
+              {% if liked %}
+              <img
+                src="{{ url_for('static', filename='images/heart y.png') }}"
+                class="icone"
+              />
+              {% else %}
+              <img
+                src="{{ url_for('static', filename='images/heart n.webp') }}"
+                class="icone"
+              />
+              {% endif %}
+            </a>
+            <span class="like-count">{{ likes_count }}</span>
+            <a
+              href="javascript:void(0);"
+              onclick="toggleComentario({{ post.id }})"
+            >
+              <img
+                src="{{ url_for('static', filename='images/comment.png') }}"
+                class="icone"
+              />
+            </a>
+          </div>
+
+          <div
+            id="comentario-{{ post.id }}"
+            class="comentario-box"
+            style="display: none"
           >
-            {% if liked %}
-            <img
-              src="{{ url_for('static', filename='images/heart y.png') }}"
-              class="icone"
-            />
-            {% else %}
-            <img
-              src="{{ url_for('static', filename='images/heart n.webp') }}"
-              class="icone"
-            />
-            {% endif %}
-          </a>
-          <span class="like-count">{{ likes_count }}</span>
-          <a
-            href="javascript:void(0);"
-            onclick="toggleComentario({{ post.id }})"
-          >
-            <img
-              src="{{ url_for('static', filename='images/comment.png') }}"
-              class="icone"
-            />
-          </a>
+            <form
+              method="POST"
+              action="{{ url_for('comment_post', post_id=post.id) }}"
+            >
+              <textarea
+                name="comentario"
+                rows="2"
+                placeholder="Comente aqui..."
+                required
+              ></textarea>
+              <button type="submit" onclick="saveScroll()">Enviar</button>
+            </form>
+          </div>
+
+          {% if comentarios %}
+          <div style="margin-top: 5px; margin-left: 10px">
+            {% for comentario in comentarios %}
+            <p class="comentario-texto">
+              <strong>{{ comentario.post.autor.apelido }}</strong>: {{
+              comentario.texto }}
+            </p>
+            {% endfor %}
+          </div>
+          {% endif %}
         </div>
-        <div
-          id="comentario-{{ post.id }}"
-          class="comentario-box"
-          style="display: none"
-        >
-          <form
-            method="POST"
-            action="{{ url_for('comment_post', post_id=post.id) }}"
-          >
-            <textarea
-              name="comentario"
-              rows="2"
-              placeholder="Comente aqui..."
-              required
-            ></textarea>
-            <button type="submit" onclick="saveScroll()">Enviar</button>
-          </form>
-        </div>
-        {% if comentarios %}
-        <div style="margin-top: 5px; margin-left: 10px">
-          {% for comentario in comentarios %}
-          <p class="comentario-texto">
-            <strong>{{ comentario.post.autor.apelido }}</strong>: {{
-            comentario.texto }}
-          </p>
-          {% endfor %}
-        </div>
-        {% endif %}
       </div>
       <hr />
       {% endfor %} {% else %}
       <p>Nenhuma postagem ainda.</p>
       {% endif %}
     </div>
+
     <footer class="nav-footer">
       <nav>
         <a href="{{ url_for('perfil') }}">Perfil</a>
@@ -122,6 +130,7 @@
         <a href="{{ url_for('logout') }}">Sair</a>
       </nav>
     </footer>
+
     <script>
       function toggleOpcoes(postId) {
         var menu = document.getElementById("opcoes-" + postId);
