--- a/static/style.css
+++ b/static/style.css
@@ -150,9 +150,9 @@ a:hover {
 .post-content {
   background-color: #000;
   padding: 16px;
-  border-radius: 20px;
+  border-radius: 20px 0 20px 20px;
   color: white;
-  border: 1px solid #444;
+  border: 1.6px solid #444;
   margin-bottom: 10px;
   position: relative;
 }
