--- a/static/style.css
+++ b/static/style.css
@@ -78,7 +78,7 @@ p {
 }
 
 a {
-  color: #ff1414;
+  color: #ff2626; /* usar vermelho */
   text-decoration: none;
   font-weight: bold;
   transition: color 0.3s;
@@ -139,7 +139,7 @@ a:hover {
   background-color: #111;
   color: #ff2626;
   padding: 10px 14px;
-  border-radius: 20px;
+  border-radius: 20px 20px 0 20px; /* ponta direita de baixo pontuda */
   font-weight: bold;
   margin-bottom: 8px;
   display: inline-block;
@@ -147,10 +147,21 @@ a:hover {
   font-size: 1.1em;
 }
 
+.user-box a {
+  color: #ff2626;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.user-box a:hover {
+  color: #ff1414;
+  text-decoration: underline;
+}
+
 .post-content {
   background-color: #000;
   padding: 16px;
-  border-radius: 20px 0 20px 20px;
+  border-radius: 20px 0 20px 20px; /* ponta direita de cima pontuda */
   color: white;
   border: 1.6px solid #444;
   margin-bottom: 10px;
@@ -262,7 +273,7 @@ a:hover {
 
   .user-box {
     padding: 8px 12px;
-    border-radius: 18px;
+    border-radius: 18px 18px 0 18px;
     font-size: 1em;
   }
 }
