--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   margin: 20px;
-  background: #0e0e0e;
+  background: #0c0c0c;
   color: #999999;
 }
 
@@ -137,9 +137,9 @@ a:hover {
   background-color: #000;
   color: #ff2626;
   padding: 10px 14px;
-  border-radius: 20px 20px 0 20px;
+  border-radius: 20px 20px 0 0;
   font-weight: bold;
-  margin-bottom: 2px;
+  margin-bottom: 0px;
   display: inline-block;
   border: 1px solid #444;
   font-size: 1.1em;
@@ -159,11 +159,11 @@ a:hover {
 .post-content {
   background-color: #000;
   padding: 16px;
-  border-radius: 20px 0 20px 20px;
+  border-radius: 0 20px 20px 20px;
   color: white;
   border: 1.6px solid #444;
   margin-bottom: 10px;
-  margin-top: -2px;
+  margin-top: -4px;
   position: relative;
 }
 
@@ -206,7 +206,7 @@ a:hover {
 
 .icone {
   width: 22px;
-  vertical-align: middle;
+  vertical-align: text-bottom;
 }
 
 .tres-pontos {
@@ -267,16 +267,16 @@ a:hover {
 
   .post-content {
     padding: 12px;
-    border-radius: 18px 0 18px 18px;
-    margin-top: -2px;
+    border-radius: 0 18px 18px 18px;
+    margin-top: -4px;
   }
 
   .user-box {
     padding: 8px 12px;
-    border-radius: 18px 18px 0 18px;
+    border-radius: 18px 18px 0 0;
     font-size: 1em;
-    background-color: #0e0e0e;
-    margin-bottom: 2px;
+    background-color: #000;
+    margin-bottom: 0px;
   }
 
   .tres-pontos {
