--- a/static/style.css
+++ b/static/style.css
@@ -238,7 +238,7 @@ a:hover {
   background: #000;
   padding: 25px 0;
   text-align: center;
-  border-top: none;
+  border-top: 2px solid #fff;
   z-index: 100;
 }
 
