Atu. no CSS dos Post Remoção do Fundo Azul ao clicar nas imagens

--- a/static/style.css
+++ b/static/style.css
@@ -284,3 +284,15 @@ a:hover {
     right: 5px;
   }
 }
+
+img {
+  outline: none;
+  border: none;
+  user-select: none;
+}
+
+img:focus,
+img:active {
+  outline: none;
+  background: transparent;
+}
