--- a/static/style.css
+++ b/static/style.css
@@ -142,7 +142,7 @@ a:hover {
   margin-bottom: 0px;
   display: inline-block;
   border: 1.6px solid #444;
-  font-size: 1.1em;
+  font-size: 1.1px;
 }
 
 .user-box a {
