--- a/static/style.css
+++ b/static/style.css
@@ -141,7 +141,7 @@ a:hover {
   font-weight: bold;
   margin-bottom: 0px;
   display: inline-block;
-  border: 1.6px solid #444;
+  border: 1.2em solid #444;
   font-size: 1.1px;
 }
 
@@ -275,7 +275,7 @@ a:hover {
   .user-box {
     padding: 8px 12px;
     border-radius: 18px 18px 0 0;
-    font-size: 1.5em;
+    font-size: 1.2em;
     background-color: #000;
     margin-bottom: 0px;
   }
