--- a/static/style.css
+++ b/static/style.css
@@ -128,8 +128,9 @@ a:hover {
 }
 
 .post-container {
+  max-width: 700px;
+  margin: 10px auto;
   padding: 0;
-  margin-bottom: 20px;
   position: relative;
 }
 
@@ -165,6 +166,10 @@ a:hover {
   margin-bottom: 10px;
   margin-top: -4px;
   position: relative;
+}
+
+.post-outro {
+  border-radius: 0 30px 20px 20px;
 }
 
 .post-content small {
@@ -270,6 +275,10 @@ a:hover {
     padding: 12px;
     border-radius: 0 0 18px 18px;
     margin-top: -4px;
+  }
+
+  .post-outro {
+    border-radius: 0 26px 18px 18px;
   }
 
   .user-box {
