--- a/static/style.css
+++ b/static/style.css
@@ -128,8 +128,8 @@ a:hover {
 }
 
 .post-container {
-  max-width: 700px;
-  margin: 10px auto;
+  max-width: 750px;
+  margin: 12px auto;
   padding: 0;
   position: relative;
 }
@@ -137,13 +137,13 @@ a:hover {
 .user-box {
   background-color: #000;
   color: #ff2626;
-  padding: 10px 14px;
+  padding: 12px 20px;
   border-radius: 20px 20px 0 0;
   font-weight: bold;
   margin-bottom: 0px;
   display: inline-block;
   border: 1.6px solid #444;
-  font-size: 1.1em;
+  font-size: 1.2em;
 }
 
 .user-box a {
@@ -159,11 +159,11 @@ a:hover {
 
 .post-content {
   background-color: #000;
-  padding: 16px;
+  padding: 18px 24px;
   border-radius: 0 0 20px 20px;
   color: white;
   border: 1.6px solid #444;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
   margin-top: -4px;
   position: relative;
 }
@@ -271,8 +271,12 @@ a:hover {
     margin: 0 10px;
   }
 
+  .post-container {
+    max-width: 95%;
+  }
+
   .post-content {
-    padding: 12px;
+    padding: 14px 18px;
     border-radius: 0 0 18px 18px;
     margin-top: -4px;
   }
@@ -282,9 +286,9 @@ a:hover {
   }
 
   .user-box {
-    padding: 8px 12px;
+    padding: 10px 16px;
     border-radius: 18px 18px 0 0;
-    font-size: 1.3em;
+    font-size: 1.2em;
     background-color: #000;
     margin-bottom: 0px;
     border: 1.6px solid #444;
