--- a/templates/feed.html
+++ b/templates/feed.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Feed Opinion</title>
+    <title>Feed • Opinion</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
@@ -47,7 +47,7 @@
               method="GET"
               action="{{ url_for('delete_post', post_id=post.id) }}"
             >
-              <button type="submit">Apagar Opinião</button>
+              <button type="submit">Deletar Opinião</button>
             </form>
           </div>
           {% endif %} {{ post.texto|e }}
