Aumento de tamanho da img Pen

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -131,7 +131,7 @@
     <a href="#texto" class="scroll-to-top" id="scrollToTopBtn">
       <img
         src="{{ url_for('static', filename='images/feather pen.png') }}"
-        alt="Nova Postagem"
+        alt="Nova Opinião"
       />
     </a>
 
