Atualização da Nav da Logo

--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -9,6 +9,14 @@
       href="{{ url_for('static', filename='style.css') }}"
     />
   </head>
+      <header class="nav-top">
+      <div class="logo-container">
+        <img
+          src="{{ url_for('static', filename='images/Logo.png') }}"
+          alt="Logo"
+        />
+      </div>
+    </header>
   <body>
     
     <footer class="nav-footer">
