--- a/static/style.css
+++ b/static/style.css
@@ -19,11 +19,11 @@ body {
   right: 0;
   width: 100%;
   background: #000;
-  padding: 10px 0; /* Padding ajustado para ser mais fino */
+  padding: 8px 0;
   text-align: center;
-  border-bottom: 1px solid #fff; /* Linha mais fina na parte inferior */
+  border-bottom: 1px solid #292929;
   z-index: 100;
-  transition: transform 0.3s ease-in-out; /* Transição para sumir/aparecer */
+  transition: transform 0.3s ease-in-out;
 }
 
 .nav-top .logo-container {
@@ -33,7 +33,7 @@ body {
 }
 
 .nav-top .logo-container img {
-  height: 40px; /* Ajuste a altura da logo conforme necessário */
+  height: 40px;
   object-fit: contain;
 }
 
@@ -271,9 +271,9 @@ a:hover {
   background: #000;
   padding: 20px 0;
   text-align: center;
-  border-top: 1px solid #fff; /* Linha mais fina */
+  border-top: 1px solid #fff;
   z-index: 100;
-  transition: transform 0.3s ease-in-out; /* Transição para sumir/aparecer */
+  transition: transform 0.3s ease-in-out;
 }
 
 .nav-footer nav {
